<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/avatar"
        android:src="@mipmap/ic_launcher_round" />

    <ImageButton
        android:id="@+id/btn_like"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/like_button"
        android:src="@android:drawable/btn_star" />

    <TextView
        android:id="@+id/tv_like_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        tools:text="1.2M" />

    <ImageButton
        android:id="@+id/btn_comment"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/comment_button"
        android:src="@android:drawable/ic_menu_edit" />

    <TextView
        android:id="@+id/tv_comment_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        tools:text="345K" />

    <ImageButton
        android:id="@+id/btn_collect"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/collect_button"
        android:src="@android:drawable/ic_menu_save" />

    <TextView
        android:id="@+id/tv_collect_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        tools:text="123K" />

    <ImageButton
        android:id="@+id/btn_share"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/share_button"
        android:src="@android:drawable/ic_menu_share" />

    <TextView
        android:id="@+id/tv_share_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        tools:text="12K" />

</LinearLayout>
